--- a/macos-versions/macos-versions/Base.lproj/Main.storyboard
+++ b/macos-versions/macos-versions/Base.lproj/Main.storyboard
@@ -64,6 +64,7 @@
                     <connections>
                         <outlet property="macosCollectionView" destination="FTB-CG-MMi" id="yCj-O7-zzX"/>
                         <outlet property="macosXCollectionView" destination="tgv-I9-41z" id="caw-bZ-d08"/>
+                        <segue destination="kqc-jo-k1g" kind="showDetail" id="aOI-YW-Ufq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -75,23 +76,23 @@
             <objects>
                 <viewController id="kqc-jo-k1g" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RE2-WI-E0s">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sSH-Gu-kuP">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="708"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="egl-eW-yK3">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="777"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="199"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyZ-ct-bx9">
-                                        <rect key="frame" x="0.0" y="777" width="414" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="199" width="414" height="488.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6du-Zt-cCI">
-                                        <rect key="frame" x="0.0" y="797.5" width="414" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="687.5" width="414" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -102,7 +103,7 @@
                         <viewLayoutGuide key="safeArea" id="VTx-b4-NVD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VTx-b4-NVD" firstAttribute="bottom" secondItem="sSH-Gu-kuP" secondAttribute="bottom" id="BGx-Ek-9iU"/>
+                            <constraint firstItem="VTx-b4-NVD" firstAttribute="bottom" secondItem="sSH-Gu-kuP" secondAttribute="bottom" constant="100" id="BGx-Ek-9iU"/>
                             <constraint firstItem="sSH-Gu-kuP" firstAttribute="leading" secondItem="VTx-b4-NVD" secondAttribute="leading" id="SST-Zg-qfK"/>
                             <constraint firstItem="sSH-Gu-kuP" firstAttribute="top" secondItem="VTx-b4-NVD" secondAttribute="top" id="cyi-Vh-NXT"/>
                             <constraint firstItem="VTx-b4-NVD" firstAttribute="trailing" secondItem="sSH-Gu-kuP" secondAttribute="trailing" id="uCq-mA-aBz"/>
@@ -111,7 +112,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hVC-H8-Hbh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1920" y="88"/>
+            <point key="canvasLocation" x="1918.840579710145" y="87.723214285714278"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pLC-eq-Gcs">
