--- a/macos-versions/macos-versions/View/VersionCollectionViewCell.xib
+++ b/macos-versions/macos-versions/View/VersionCollectionViewCell.xib
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmk-i0-bd8">
-                        <rect key="frame" x="8" y="40" width="99" height="18"/>
+                        <rect key="frame" x="20" y="40" width="75" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-Kh-r3e">
-                        <rect key="frame" x="8" y="79" width="99" height="26"/>
+                        <rect key="frame" x="20" y="79" width="75" height="26"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -34,13 +34,15 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="kmk-i0-bd8" secondAttribute="trailing" constant="8" id="5RN-KV-cgX"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="9GM-Iz-Ofi"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="top" secondItem="kmk-i0-bd8" secondAttribute="bottom" constant="21" id="Ahp-LE-Ym9"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="40" id="HeZ-h9-CIi"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="UuJ-aq-lYZ"/>
-                <constraint firstAttribute="bottom" secondItem="m3D-Kh-r3e" secondAttribute="bottom" constant="40" id="aRc-n6-McM"/>
-                <constraint firstAttribute="trailing" secondItem="m3D-Kh-r3e" secondAttribute="trailing" constant="8" id="wpz-lt-cHk"/>
+                <constraint firstAttribute="bottom" secondItem="m3D-Kh-r3e" secondAttribute="bottom" constant="40" id="5fe-f7-hAw"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Fe8-gD-EaT"/>
+                <constraint firstItem="kmk-i0-bd8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Q5r-2o-vAu"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="afc-6t-7Yf"/>
+                <constraint firstItem="kmk-i0-bd8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="40" id="cPQ-cm-dRw"/>
+                <constraint firstAttribute="trailing" secondItem="kmk-i0-bd8" secondAttribute="trailing" constant="20" id="fsd-xA-Cnv"/>
+                <constraint firstAttribute="trailing" secondItem="m3D-Kh-r3e" secondAttribute="trailing" constant="20" id="mdv-sk-HdS"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="top" secondItem="kmk-i0-bd8" secondAttribute="bottom" constant="21" id="urb-1y-dgU"/>
+                <constraint firstItem="kmk-i0-bd8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="wOa-3u-fxs"/>
             </constraints>
             <size key="customSize" width="115" height="145"/>
             <connections>
