--- a/macos-versions/macos-versions/View/VersionCollectionViewCell.xib
+++ b/macos-versions/macos-versions/View/VersionCollectionViewCell.xib
@@ -11,48 +11,66 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VersionCollectionViewCell" id="gTV-IL-0wX" customClass="VersionCollectionViewCell" customModule="macos_versions" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="115" height="145"/>
+            <rect key="frame" x="0.0" y="0.0" width="156" height="171"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="115" height="145"/>
+                <rect key="frame" x="0.0" y="0.0" width="156" height="171"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmk-i0-bd8">
-                        <rect key="frame" x="20" y="40" width="75" height="18"/>
+                        <rect key="frame" x="10" y="111" width="136" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="136" id="d5F-av-jWy"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-Kh-r3e">
-                        <rect key="frame" x="20" y="79" width="75" height="26"/>
+                        <rect key="frame" x="10" y="148" width="136" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="136" id="4Z2-RK-1eB"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Apple_macos-monterey_shortcuts-gallery_06072021_big_carousel.jpg.large" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RvK-8x-qQO">
+                        <rect key="frame" x="0.0" y="0.0" width="156" height="103"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="103" id="AEG-e7-sP9"/>
+                            <constraint firstAttribute="width" constant="156" id="T5l-kk-gMQ"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="103" id="uGo-iA-VL0"/>
+                        </constraints>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="m3D-Kh-r3e" secondAttribute="bottom" constant="40" id="5fe-f7-hAw"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Fe8-gD-EaT"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Q5r-2o-vAu"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="afc-6t-7Yf"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="40" id="cPQ-cm-dRw"/>
-                <constraint firstAttribute="trailing" secondItem="kmk-i0-bd8" secondAttribute="trailing" constant="20" id="fsd-xA-Cnv"/>
-                <constraint firstAttribute="trailing" secondItem="m3D-Kh-r3e" secondAttribute="trailing" constant="20" id="mdv-sk-HdS"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="top" secondItem="kmk-i0-bd8" secondAttribute="bottom" constant="21" id="urb-1y-dgU"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="wOa-3u-fxs"/>
+                <constraint firstItem="RvK-8x-qQO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5Ih-27-01c"/>
+                <constraint firstAttribute="trailing" secondItem="RvK-8x-qQO" secondAttribute="trailing" id="67d-sh-sbC"/>
+                <constraint firstAttribute="bottom" secondItem="m3D-Kh-r3e" secondAttribute="bottom" constant="7" id="6lY-xY-yCd"/>
+                <constraint firstAttribute="trailing" secondItem="m3D-Kh-r3e" secondAttribute="trailing" constant="10" id="Adu-fo-SJN"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="top" secondItem="kmk-i0-bd8" secondAttribute="bottom" constant="19" id="PNx-Eu-JFc"/>
+                <constraint firstAttribute="trailing" secondItem="kmk-i0-bd8" secondAttribute="trailing" constant="10" id="PoS-FV-5kY"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Q08-EG-7Mq"/>
+                <constraint firstItem="kmk-i0-bd8" firstAttribute="top" secondItem="RvK-8x-qQO" secondAttribute="bottom" constant="8" symbolic="YES" id="VFo-ry-6es"/>
+                <constraint firstItem="kmk-i0-bd8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="j4I-CZ-spQ"/>
+                <constraint firstItem="RvK-8x-qQO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="wht-t6-y8t"/>
             </constraints>
-            <size key="customSize" width="115" height="145"/>
+            <size key="customSize" width="156" height="171"/>
             <connections>
                 <outlet property="nameLabel" destination="m3D-Kh-r3e" id="mZn-1k-jjY"/>
+                <outlet property="versionImage" destination="RvK-8x-qQO" id="z7r-OU-PZc"/>
                 <outlet property="versionLabel" destination="kmk-i0-bd8" id="P9e-jb-42z"/>
             </connections>
-            <point key="canvasLocation" x="-99.275362318840592" y="55.915178571428569"/>
+            <point key="canvasLocation" x="-128.98550724637681" y="47.209821428571423"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="Apple_macos-monterey_shortcuts-gallery_06072021_big_carousel.jpg.large" width="1494" height="995"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
