--- a/macos-versions/macos-versions/View/VersionCollectionViewCell.xib
+++ b/macos-versions/macos-versions/View/VersionCollectionViewCell.xib
@@ -11,36 +11,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VersionCollectionViewCell" id="gTV-IL-0wX" customClass="VersionCollectionViewCell" customModule="macos_versions" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="156" height="171"/>
+            <rect key="frame" x="0.0" y="0.0" width="156" height="209"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="156" height="171"/>
+                <rect key="frame" x="0.0" y="0.0" width="156" height="209"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmk-i0-bd8">
-                        <rect key="frame" x="10" y="111" width="136" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="136" id="d5F-av-jWy"/>
-                        </constraints>
+                        <rect key="frame" x="59.5" y="158" width="37.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-Kh-r3e">
-                        <rect key="frame" x="10" y="148" width="136" height="16"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="136" id="4Z2-RK-1eB"/>
-                        </constraints>
+                        <rect key="frame" x="61" y="186" width="34.5" height="16"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Apple_macos-monterey_shortcuts-gallery_06072021_big_carousel.jpg.large" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RvK-8x-qQO">
-                        <rect key="frame" x="0.0" y="0.0" width="156" height="103"/>
+                        <rect key="frame" x="0.0" y="0.0" width="156" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="103" id="AEG-e7-sP9"/>
+                            <constraint firstAttribute="height" constant="120" id="AEG-e7-sP9"/>
                             <constraint firstAttribute="width" constant="156" id="T5l-kk-gMQ"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="103" id="uGo-iA-VL0"/>
                         </constraints>
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                     </imageView>
@@ -50,23 +43,19 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="RvK-8x-qQO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5Ih-27-01c"/>
-                <constraint firstAttribute="trailing" secondItem="RvK-8x-qQO" secondAttribute="trailing" id="67d-sh-sbC"/>
                 <constraint firstAttribute="bottom" secondItem="m3D-Kh-r3e" secondAttribute="bottom" constant="7" id="6lY-xY-yCd"/>
-                <constraint firstAttribute="trailing" secondItem="m3D-Kh-r3e" secondAttribute="trailing" constant="10" id="Adu-fo-SJN"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="top" secondItem="kmk-i0-bd8" secondAttribute="bottom" constant="19" id="PNx-Eu-JFc"/>
-                <constraint firstAttribute="trailing" secondItem="kmk-i0-bd8" secondAttribute="trailing" constant="10" id="PoS-FV-5kY"/>
-                <constraint firstItem="m3D-Kh-r3e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Q08-EG-7Mq"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="top" secondItem="RvK-8x-qQO" secondAttribute="bottom" constant="8" symbolic="YES" id="VFo-ry-6es"/>
-                <constraint firstItem="kmk-i0-bd8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="j4I-CZ-spQ"/>
-                <constraint firstItem="RvK-8x-qQO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="wht-t6-y8t"/>
+                <constraint firstItem="kmk-i0-bd8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Mum-eu-MOy"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="top" secondItem="kmk-i0-bd8" secondAttribute="bottom" constant="10" id="PNx-Eu-JFc"/>
+                <constraint firstItem="m3D-Kh-r3e" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="aNb-uf-oKX"/>
+                <constraint firstItem="RvK-8x-qQO" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="nnM-om-ufF"/>
             </constraints>
-            <size key="customSize" width="156" height="171"/>
+            <size key="customSize" width="156" height="209"/>
             <connections>
                 <outlet property="nameLabel" destination="m3D-Kh-r3e" id="mZn-1k-jjY"/>
                 <outlet property="versionImage" destination="RvK-8x-qQO" id="z7r-OU-PZc"/>
                 <outlet property="versionLabel" destination="kmk-i0-bd8" id="P9e-jb-42z"/>
             </connections>
-            <point key="canvasLocation" x="-128.98550724637681" y="47.209821428571423"/>
+            <point key="canvasLocation" x="-128.98550724637681" y="34.486607142857139"/>
         </collectionViewCell>
     </objects>
     <resources>
